--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         html, body {
             margin: 0;
-            height: 100%;
+            min-height: 100%;
             background-color: var(--deep-night);
             color: #e9f5ff;
             font-family: 'Press Start 2P', system-ui, sans-serif;
@@ -29,7 +29,9 @@
 
         body {
             position: relative;
-            overflow: hidden;
+            min-height: 100vh;
+            overflow-x: hidden;
+            overflow-y: auto;
             display: flex;
             align-items: center;
             justify-content: center;
