Add mech HUD OS interface

--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             <div class="btn-bar">
                 <a class="btn" href="mailto:max@example.com">联系我</a>
                 <a class="btn" href="#">进入像素世界</a>
+                <a class="btn" href="hud.html">Enter HUD OS</a>
             </div>
         </div>
     </div>
